<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Pasek aplikacji ze strzałką powrotu -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        app:title="@string/add_phone_title"
        app:titleTextColor="@color/white" />

    <!-- Formularz -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="*"
            android:stretchColumns="1">

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manufacturer_label" />
                <EditText
                    android:id="@+id/editManufacturer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/manufacturer_hint" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/model_label" />
                <EditText
                    android:id="@+id/editModel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/model_hint" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/android_version_label" />
                <EditText
                    android:id="@+id/editAndroidVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/android_version_hint" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/website_label" />
                <EditText
                    android:id="@+id/editWebsite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="200dp"
                    android:hint="@string/website_hint" />
            </TableRow>

            <!-- Przyciski -->
            <TableRow>
                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save" />
                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel" />
                <Button
                    android:id="@+id/btnWebsite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/website" />
            </TableRow>
        </TableLayout>
    </ScrollView>
</LinearLayout>
